# laravel/app/Models/UserProfile.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class UserProfile extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'avatar_url',
+        'bio',
+        'language',
+    ];
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+}
